# flask-template-app

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
migrations/: env.py
src/: gunicorn_conf.py
src/core/: __init__.py  database.py  models.py
src/core/pipeline/: pipeline.py  registry.py
src/core/utils/: case.py  decorators.py  module_loading.py  signals.py
src/service/: __init__.py  cli.py  error_handlers.py  mallow.py  receivers.py
src/service/auth/: __init__.py  decorators.py  routes.py  test_helpers.py  token.py
src/service/config/: __init__.py  default.py  development.py  logging.py  production.py  testing.py
src/service/utils/: crypto.py  logging.py  migrations.py
tests/: conftest.py  test_crypto.py  test_decorators.py  test_jwt_token.py  test_migrations.py
